// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It adds dividers 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #ec0000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #ff8228;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #3f75c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-top: 48px;
  padding-bottom: 48px;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  position: relative;
}

.c8 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  position: absolute;
  width: 100%;
  box-shadow: inset 0 0 0 1px #e3e3e3;
}

.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c7 {
  height: 1px;
}

.c3 {
  font-size: 16px;
  line-height: 24px;
  -webkit-transform: translateY(0.36em);
  -ms-transform: translateY(0.36em);
  transform: translateY(0.36em);
  padding-top: 1px;
  font-family: gordita,sans-serif;
  font-weight: 500;
  color: #232323;
}

.c3:before {
  content: '';
  margin-top: -13px;
  display: block;
  height: 0;
}

<div
  class="c0"
  data-id="stack"
  display="flex"
  width="full"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      data-id="placeholder"
      display="flex"
    >
      <span
        class="c3 -span c4"
        color="grey56"
        data-id="text"
        display="block"
      />
    </div>
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
      data-id="divider"
    >
      <div
        class="c7 c8"
        width="full"
      />
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c9"
      data-id="placeholder"
      display="flex"
    >
      <span
        class="c3 -span c4"
        color="grey56"
        data-id="text"
        display="block"
      />
    </div>
  </div>
  <div
    class="c5"
  >
    <div
      class="c6"
      data-id="divider"
    >
      <div
        class="c7 c8"
        width="full"
      />
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c10"
      data-id="placeholder"
      display="flex"
    >
      <span
        class="c3 -span c4"
        color="grey56"
        data-id="text"
        display="block"
      />
    </div>
  </div>
</div>
`;

exports[`It can stack 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: 100%;
}

.c2 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  padding-bottom: 0;
}

.c3 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #ec0000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #ff8228;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  background-color: #3f75c6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  display: block;
}

.c1:last-child {
  padding-bottom: 0;
}

.c4 {
  font-size: 16px;
  line-height: 24px;
  -webkit-transform: translateY(0.36em);
  -ms-transform: translateY(0.36em);
  transform: translateY(0.36em);
  padding-top: 1px;
  font-family: gordita,sans-serif;
  font-weight: 500;
  color: #232323;
}

.c4:before {
  content: '';
  margin-top: -13px;
  display: block;
  height: 0;
}

<div
  class="c0"
  data-id="stack"
  display="flex"
  width="full"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
      data-id="placeholder"
      display="flex"
    >
      <span
        class="c4 -span c5"
        color="grey56"
        data-id="text"
        display="block"
      />
    </div>
  </div>
  <div
    class="c1 c2"
  >
    <div
      class="c6"
      data-id="placeholder"
      display="flex"
    >
      <span
        class="c4 -span c5"
        color="grey56"
        data-id="text"
        display="block"
      />
    </div>
  </div>
  <div
    class="c1 c2"
  >
    <div
      class="c7"
      data-id="placeholder"
      display="flex"
    >
      <span
        class="c4 -span c5"
        color="grey56"
        data-id="text"
        display="block"
      />
    </div>
  </div>
</div>
`;
